# premiados-obmep

./: README.md  pyproject.toml  scrapy.cfg
premiados_obmep/: items.py  middlewares.py  pipelines.py  settings.py
premiados_obmep/spiders/: obmep_17.py
