[tool.poetry]
name = "premiados-obmep"
version = "0.1.0"
description = ""
authors = ["Brenner <bs.brenner.santos@gmail.com>"]
readme = "README.md"
packages = [{include = "premiados_obmep"}]

[tool.poetry.dependencies]
python = "^3.10"


[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"
blue = "^0.9.1"
isort = "^5.12.0"
pytest-cov = "^4.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = "."
addopts = "--doctest-modules"

[tool.isort]
profile= "black"
line_length = 79